duihome (0.21.14~1) unstable; urgency=low

  * New version [UNRELEASED]

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 30 Jun 2010 19:39:34 +0300

duihome (0.21.13-1) unstable; urgency=low

  * Fixes: NB#174923 - Minimize/maximize animation end/begins at the edge of the screen
  * Switcher detail view is usable again (if enabled)

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 30 Jun 2010 19:31:16 +0300

duihome (0.21.12-1) unstable; urgency=low

  * Implemented: SWP#3148 Verify tappability of switcher thumbnail close button
  * Implemented: SWP#DUI-3336 Application start-up indication
  * Implemented: SWP#DUI-3244 Remove customized handling of call UI windows in switcher
  * Fixes: NB#176177 - Launcher buttons are not placed in their expected positions

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 28 Jun 2010 17:59:51 +0300

duihome (0.21.11-2) unstable; urgency=low

  * Removed a dependency to maemo-services package

 -- Aki Koskinen <aki.koskinen@nokia.com>  Fri, 18 Jun 2010 13:25:00 +0300

duihome (0.21.11-1) unstable; urgency=low

  * Fixes: NB#167077 - [browser-blocker] Launcher is passing the substitution variables in the Exec field of the .desktop field as parameters when there is no substitution to be done
  * Fixes: NB#171829 - Applications do not get _NET_ACTIVE_WINDOW event

 -- Aki Koskinen <aki.koskinen@nokia.com>  Thu, 17 Jun 2010 16:11:00 +0300

duihome (0.21.10-1) unstable; urgency=low

  * Support for absolute icon paths in .desktop entry files
  * Implemented: SWP#DUI-2666 Verify the UI flow when exiting and re-entering homescreen views
  * Implemented: SWP#DUI-3013 Optimize switcher update when new windows are created, old ones are removed or windows update
  * Fixes: NB#173173 - Launcher view switch needs too much panning. Panning paramteres have now been tuned as required by UI designers
  * Fixes: NB#168403 - Shared QObjects being deleted directly in launcher code.